--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,10 @@
-name: Practical_work
+name: skillbox
 channels:
   - conda-forge
 dependencies:
-  - python = 3.12
+  - python=3.12
   - requests
   - selenium
-  - python-chromedriver-binary = 133.0.6888.2.0
   - pytest
-
-
+  - pytest-rerunfailures
+  - make
