--- a/environment_2.yml
+++ b/environment_2.yml
@@ -1,9 +1,10 @@
-name: Practical_work_2
+name: skillbox_1
 channels:
   - conda-forge
 dependencies:
-  - python = 3.12
+  - python=3.12
   - requests
   - selenium
-  - webdriver-manager
   - pytest
+#  - pytest-rerunfailures
+  - make
