Practice work 5.6 in module_5

--- a/environment_2.yml
+++ b/environment_2.yml
@@ -9,5 +9,8 @@ dependencies:
   - pytest-rerunfailures
   - make
   - pip:
-    - allure-pytest
+      - pytest-playwright
+  - allure-pytest
   - flake8
+
+
