Practice work 6.5 in module_6

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@
 path_to_driver_chrome = D:/Browsersdriver/Chromedriver/chromedriver-win64.131.0.6778.108/chromedriver.exe
 
 # Указываем директорию, где лежат тесты
-testpaths = module_7
+testpaths = module_6
 
 # Задаем шаблон для имен тестовых файлов (если они не следуют стандарту pytest)
 python_files = test_*.py
@@ -13,4 +13,7 @@ python_files = test_*.py
 pythonpath = .
 
 # Настройка вывода результатов тестов
-addopts = --tb=no --disable-warnings --alluredir=allure_results --reruns 3 --browser=chromium --headed
+addopts = --tb=no --disable-warnings --alluredir=allure_results --reruns 3 --browser chromium --headed
+
+# Для playwright  другие браузера
+# --browser webkit --browser firefox
