Practice work 6.5 in module_6

--- a/logging.ini
+++ b/logging.ini
@@ -31,8 +31,9 @@ args=(sys.stdout,)
 class=FileHandler
 level=DEBUG
 formatter=commonFormatter
-args=('log.txt', 'w')
+args=('Request.txt', 'w')
 
 [formatter_commonFormatter]
-format=[%(levelname)s][%(asctime)][%(name)s] %(message)s
+format=[%(asctime)s][%(levelname)s] %(message)s
 datefmt=
+#[%(name)s]
