--- a/pytest.ini
+++ b/pytest.ini
@@ -13,7 +13,7 @@ python_files = test_*.py
 pythonpath = .
 
 # Настройка вывода результатов тестов
-addopts = --tb=no --disable-warnings --alluredir=allure_results --reruns 3 --browser chromium --headed
+addopts = --tb=no --disable-warnings --alluredir=allure_results --reruns 3 --browser chromium --headed -s
 
 # Для playwright  другие браузера
 # --browser webkit --browser firefox
