--- a/logging.ini
+++ b/logging.ini
@@ -34,6 +34,5 @@ formatter=commonFormatter
 args=('Request.txt', 'w')
 
 [formatter_commonFormatter]
-format=[%(asctime)s][%(levelname)s] %(message)s
+format=[%(levelname)s][%(asctime)s][%(name)s] %(message)s
 datefmt=
-#[%(name)s]
