--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@
 path_to_driver_chrome = D:/Browsersdriver/Chromedriver/chromedriver-win64.131.0.6778.108/chromedriver.exe
 
 # Указываем директорию, где лежат тесты
-testpaths = module_7
+testpaths = FINAL_WORK_AUTOTEST_BASE
 
 # Задаем шаблон для имен тестовых файлов (если они не следуют стандарту pytest)
 python_files = test_*.py
