--- a/pytest.ini
+++ b/pytest.ini
@@ -13,7 +13,8 @@ python_files = test_*.py
 pythonpath = .
 
 # Настройка вывода результатов тестов
-addopts = --tb=no --disable-warnings --alluredir=allure_results --reruns 3 --browser chromium --headed -s
+addopts = --tb=no --disable-warnings --alluredir=allure_results --reruns 3 -o codec=utf-8 --browser chromium --headed -s
 
 # Для playwright  другие браузера
-# --browser webkit --browser firefox
+# --headed -s - режим открывать браузер наверно
+# --browser chromium --browser webkit --browser firefox
